fix footer content spacing issues on mobile

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -10,14 +10,14 @@
 }
 .footer .container:first-child{
   display: grid;
-  grid-template-rows: repeat(8, 100px);
+  grid-template-rows: repeat(10, 100px);
   grid-template-columns: repeat(1, 100%);
   grid-template-areas:
     "logo"
     "logo"
     "space"
     "title"
-    "input"
+    "title"
     "input"
     "navigation"
     "navigation"
@@ -54,6 +54,7 @@
 .newsletter__subscription {
   grid-area: input;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   position: relative;
   gap: 1.5rem;
@@ -78,7 +79,7 @@
 .newsletter__subscription label {
   position: absolute;
   transition: all 0.3s ease-out;
-  top: 50%;
+  top: .65rem;
   transform: translateY(-50%);
   z-index: 1;
 }
@@ -122,6 +123,9 @@
   .footer__nav ul {
     width: fit-content;
     margin-left: auto;
+  }
+  .newsletter__subscription label{
+  top: 50%;
   }
 }
 @media (min-width: 1200px) {
